// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsSnippet component should update the JavaScript snippet when the flag prop changes 1`] = `
<DocumentFragment>
  <div
    class="mr-feature-flag-js-snippet-container"
  >
    <h3>
      JavaScript Snippet
    </h3>
    <div
      class="base16 darcula"
    >
      <button
        class="react_highlight_syntax_copy btn__dark "
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="13"
            rx="2"
            ry="2"
            width="13"
            x="9"
            y="9"
          />
          <path
            d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
          />
        </svg>
      </button>
      <pre>
        <code
          class="hljs language-javascript"
          data-type="react-highlight-syntax"
        >
          <span
            class="hljs-keyword"
          >
            import
          </span>
           domReady 
          <span
            class="hljs-keyword"
          >
            from
          </span>
           
          <span
            class="hljs-string"
          >
            '@wordpress/dom-ready'
          </span>
          ;
domReady(
          <span
            class="hljs-function"
          >
            <span
              class="hljs-keyword"
            >
              function
            </span>
             (
            <span
              class="hljs-params"
            />
            ) 
          </span>
          {
	
          <span
            class="hljs-keyword"
          >
            if
          </span>
           (
		
          <span
            class="hljs-keyword"
          >
            typeof
          </span>
           
          <span
            class="hljs-built_in"
          >
            window
          </span>
          ?.codebFeatureFlags !== 
          <span
            class="hljs-string"
          >
            'undefined'
          </span>
           &&
		
          <span
            class="hljs-built_in"
          >
            window
          </span>
          .codebFeatureFlags.isEnabled(
          <span
            class="hljs-string"
          >
            'testFlag1'
          </span>
          )
	) {
		
          <span
            class="hljs-comment"
          >
            // js code goes here...
          </span>
          
	}
});
        </code>
      </pre>
    </div>
  </div>
</DocumentFragment>
`;

exports[`JsSnippet component should update the JavaScript snippet when the flag prop changes 2`] = `
<DocumentFragment>
  <div
    class="mr-feature-flag-js-snippet-container"
  >
    <h3>
      JavaScript Snippet
    </h3>
    <div
      class="base16 darcula"
    >
      <button
        class="react_highlight_syntax_copy btn__dark "
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="13"
            rx="2"
            ry="2"
            width="13"
            x="9"
            y="9"
          />
          <path
            d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
          />
        </svg>
      </button>
      <pre>
        <code
          class="hljs language-javascript"
          data-type="react-highlight-syntax"
        >
          <span
            class="hljs-keyword"
          >
            import
          </span>
           domReady 
          <span
            class="hljs-keyword"
          >
            from
          </span>
           
          <span
            class="hljs-string"
          >
            '@wordpress/dom-ready'
          </span>
          ;
domReady(
          <span
            class="hljs-function"
          >
            <span
              class="hljs-keyword"
            >
              function
            </span>
             (
            <span
              class="hljs-params"
            />
            ) 
          </span>
          {
	
          <span
            class="hljs-keyword"
          >
            if
          </span>
           (
		
          <span
            class="hljs-keyword"
          >
            typeof
          </span>
           
          <span
            class="hljs-built_in"
          >
            window
          </span>
          ?.codebFeatureFlags !== 
          <span
            class="hljs-string"
          >
            'undefined'
          </span>
           &&
		
          <span
            class="hljs-built_in"
          >
            window
          </span>
          .codebFeatureFlags.isEnabled(
          <span
            class="hljs-string"
          >
            'testFlag2'
          </span>
          )
	) {
		
          <span
            class="hljs-comment"
          >
            // js code goes here...
          </span>
          
	}
});
        </code>
      </pre>
    </div>
  </div>
</DocumentFragment>
`;
